[project]
name = "bunny-care"
version = "0.1.0"
description = "Virtual Bunny Care FastAPI app"
authors = [
    { name="Your Name", email="your@email.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic",
]

[tool.setuptools]
packages = ["."]

[tool.uv]
package-mode = false

[tool.poetry]
package-mode = false
